# davmail_auth

./: .gitignore  LICENSE  README.md  pyproject.toml
src/davmail_auth/: davmail_auth.py
